--- a/index.html
+++ b/index.html
@@ -3,10 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
     <link rel="stylesheet" href="style.css">
     <title>ByteBrust</title>
 </head>
 <body>
+    
+        <div class="main">
+            <div class="home">
+                <div class="nav">
+                    <img src="./media/img/favicon_io/favicon-32x32.png" alt="NavLogo" srcset="">
+                    <div class="right">
+                        <a href="">Testimonial</a>
+                        <a href="">menu</a>
+                        <i class="ri-menu-line"></i>
+                    </div>
+                </div>
+                
+        </div>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
