content & desings are updated

--- a/index.html
+++ b/index.html
@@ -1,30 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css"
-    rel="stylesheet"
-/>
-    <link rel="stylesheet" href="style.css">
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>ByteBrust</title>
-</head>
-<body>
-    
-        <div class="main">
-            <div class="home">
-                <div class="nav">
-                    <img src="./media/img/favicon_io/favicon-32x32.png" alt="NavLogo" srcset="">
-                    <div class="right">
-                        <a href="">Testimonial</a>
-                        <a href="">menu</a>
-                        <i class="ri-menu-line"></i>
-                    </div>
-                </div>
-                
+  </head>
+  <body>
+    <div class="main">
+      <div class="home">
+        <div class="nav">
+          <img
+            src="./media/img/favicon_io/favicon-32x32.png"
+            alt="NavLogo"
+            srcset=""
+          />
+          <div class="right">
+            <a href="">Testimonial</a>
+            <a href="">menu</a>
+            <i class="ri-menu-line"></i>
+          </div>
         </div>
+        <div class="homemain">
+          <h1>We make it happen!</h1>
+          <div class="headings">
+            <h1>Websites</h1>
+            <h1>Apps</h1>
+            <h1>Branding</h1>
+          </div>
+        </div>
+        <div class="homelast">
+          <p>
+                        ByteBrust is a pioneering force in the realm of web and app
+            development,<br />
+            dedicated to crafting digital experiences that transcend
+            expectations. <br />
+            With a proven track record of collaborating with some of the most
+            iconic brands, <br />
+            we bring a blend of creativity, innovation, and technical expertise
+            to every project.
+          </p>
+        </div>
+      </div>
     </div>
     <script src="./script.js"></script>
-</body>
+  </body>
 </html>
